@@ -98,6 +98,7 @@
 
     observer_image="misc/eye.png"
     tod_bright_image="misc/tod-bright.png"
+    tod_dark_image="misc/tod-dark.png"
 
     level_image="misc/icon-advance.png"
 
