@@ -152,6 +152,27 @@ Xu          , Xu          , Qxu         , Qxu         , Ql          , Ql        
             x,y=19,11
             type="Dark Adept"
             generate_name=yes
+            halo=halo/darkens-aura.png
+            [modifications]
+                [object]
+                    silent=yes
+                    [effect]
+                        apply_to=new_ability
+                        [abilities]
+                            [illuminates]
+                                id=illumination
+                                value=-25
+                                min_value=-25
+                                cumulative=no
+                                name= "darkens"
+                                female_name= "female^darkens"
+                                description= "darkens and stuff"
+                                affect_self=yes
+                            [/illuminates]
+                        [/abilities]
+                    [/effect]
+                [/object]
+            [/modifications]
         [/unit]
     [/side]
 
